src/main/resources/static/css/base.css
.bodyclass {
    background: linear-gradient(#e7e7e7, #e7e7e7);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
/*
    color: #fff;
*/
    height: 450px;
    padding-top: 50px;
}

/*
.navbar{

box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);

}
*/

/*.table, .form-horizontal{
background-color: rgba(255,255,255,.6);

}*/

body, html{
     height: 100%;
 	background-repeat: no-repeat;
 	font-family: 'Oxygen', sans-serif;
}

.container {

    min-height: 500px;

}

.bodyclass {
     margin:0;
     padding:0;
     width:100%;
     height:100%;
     overflow:hidden;
}

#page_wrapper{
  width:inherit;
  height: 1000px;
  padding: 0;
  margin: 0;
  /*background:url(../res/login_page.jpg);*/
  background-size: 100% 100%;
  display:block;
}


/* IE8- CSS hack */
@media \0screen\,screen\9 {
    .bodyclass {
        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff32384c",
        endColorstr="#ff3e3c55",GradientType=0);
    }
}

